--- a/catalog.html
+++ b/catalog.html
@@ -63,8 +63,29 @@
             <a class="header__basket-link header__basket-link-full" href="">
               <img src="img/basket-red.svg" width="21" height="20" alt="Корзина"> 2 товара
             </a>
-            <div></div>
+            <div class="basket-table">
+              <form>
+                <table class="basket-table__content">
+                  <tr class="basket-table__product">
+                    <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" aria-label="Удалить товар"></a></td>
+                    <td class="basket-table__product-image"><img src="img/mini__ice-cream__1.jpeg" width="33" height="33" alt="иконка мороженого"></td>
+                    <td class="basket-table__product-name">Пломбир с апельсиновым джемом</td>
+                    <td class="basket-table__product-weight">1,5 кг <span class="basket-table__product-price">х 200 руб.</span></td>
+                    <td class="basket-table__product-cost">300 руб.</td>
+                  </tr>
+                  <tr class="basket-table__product">
+                      <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" aria-label="Удалить товар"></a></td>
+                      <td class="basket-table__product-image"><img src="img/mini__ice-cream__2.jpeg" width="33" height="33" alt="иконка мороженого"></td>
+                      <td class="basket-table__product-name">Клубничный пломбир с присыпкой из белого шоколада</td>
+                      <td class="basket-table__product-weight">1,5 кг <span class="basket-table__product-price">х 300 руб.</span></td>
+                      <td class="basket-table__product-cost">450  руб.</td>
+                    </tr>
+                </table>
+                  <p class="basket-table__product-sum"><b>Итого: 750 руб.</b></p>
+                  <button class="basket-table-button button" type="submit" name="basket-table__order">Оформить заказ</button>
+              </form>
           </div>
+        </div>
         </div>
       </nav>
       <div class="contacts">
