Поправила ховеры и всякие баги

--- a/catalog.html
+++ b/catalog.html
@@ -67,14 +67,14 @@
               <form>
                 <table class="basket-table__content">
                   <tr class="basket-table__product">
-                    <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" aria-label="Удалить товар"></a></td>
+                    <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href="" aria-label="Удалить товар"></a></td>
                     <td class="basket-table__product-image"><img src="img/mini__ice-cream__1.jpeg" width="33" height="33" alt="иконка мороженого"></td>
                     <td class="basket-table__product-name">Пломбир с апельсиновым джемом</td>
                     <td class="basket-table__product-weight">1,5 кг <span class="basket-table__product-price">х 200 руб.</span></td>
                     <td class="basket-table__product-cost">300 руб.</td>
                   </tr>
                   <tr class="basket-table__product">
-                      <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" aria-label="Удалить товар"></a></td>
+                      <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href="" aria-label="Удалить товар"></a></td>
                       <td class="basket-table__product-image"><img src="img/mini__ice-cream__2.jpeg" width="33" height="33" alt="иконка мороженого"></td>
                       <td class="basket-table__product-name">Клубничный пломбир с присыпкой из белого шоколада</td>
                       <td class="basket-table__product-weight">1,5 кг <span class="basket-table__product-price">х 300 руб.</span></td>
@@ -166,7 +166,7 @@
                   <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -178,7 +178,7 @@
                   <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-кофейное с кусочками шоколада</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-кофейное с кусочками шоколада</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -188,7 +188,7 @@
                 <span class="catalog-item__ruble">₽</span>
                 <span class="catalog-item__weight">/кг</span>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -200,7 +200,7 @@
                   <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное крем-брюле с карамельной подливкой</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное крем-брюле с карамельной подливкой</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -212,7 +212,7 @@
                       <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с брусничным джемом</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с брусничным джемом</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -224,7 +224,7 @@
                       <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-черничное с цельными ягодами черники</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-черничное с цельными ягодами черники</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -236,7 +236,7 @@
                       <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-лимонное с карамельной присыпкой</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-лимонное с карамельной присыпкой</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -248,7 +248,7 @@
                       <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с шоколадной стружкой</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с шоколадной стружкой</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -260,7 +260,7 @@
                       <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-ванильное с кусочками шоколада</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-ванильное с кусочками шоколада</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -272,7 +272,7 @@
                       <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочноe с ментоловым сиропом</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочноe с ментоловым сиропом</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -284,7 +284,7 @@
                       <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с кусочками черного шоколада</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с кусочками черного шоколада</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -296,7 +296,7 @@
                       <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с мятным сиропом</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с мятным сиропом</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
           </ul>
