--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                   <form>
                     <table class="basket-table__content">
                       <tr class="basket-table__product">
-                        <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" aria-label="Удалить товар"></a></td>
+                        <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href="" aria-label="Удалить товар"></a></td>
                         <td class="basket-table__product-image"><img src="img/mini__ice-cream__1.jpeg" width="33" height="33" alt="иконка мороженого"></td>
                         <td class="basket-table__product-name">Пломбир с апельсиновым джемом</td>
                         <td class="basket-table__product-weight">1,5 кг <span class="basket-table__product-price">х 200 руб.</span></td>
                         <td class="basket-table__product-cost">300 руб.</td>
                       </tr>
                       <tr class="basket-table__product">
-                          <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" aria-label="Удалить товар"></a></td>
+                          <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href="" aria-label="Удалить товар"></a></td>
                           <td class="basket-table__product-image"><img src="img/mini__ice-cream__2.jpeg" width="33" height="33" alt="иконка мороженого"></td>
                           <td class="basket-table__product-name">Клубничный пломбир с присыпкой из белого шоколада</td>
                           <td class="basket-table__product-weight">1,5 кг <span class="basket-table__product-price">х 300 руб.</span></td>
@@ -138,7 +138,7 @@
               <h2 class="gifts-item__title">Малинка даром!</h2>
               <p class="gifts-item__text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно. </p>
             </div>
-            <a class="gifts-item__link" href="">Хочу варенье!</a>
+            <a class="gifts-item__link button" href="">Хочу варенье!</a>
             </li>
           <li class="gifts-item gifts__item">
             <img src="img/gifts-item__background--choco.jpeg" width="570" height="300" alt="Фон с шоколадкой">
@@ -146,7 +146,7 @@
               <h2 class="gifts-item__title">Шоколадки даром!</h2>
               <p class="gifts-item__text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.   </p>
             </div>
-            <a class="gifts-item__link" href="">Хочу шоколадки!</a>
+            <a class="gifts-item__link button" href="">Хочу шоколадки!</a>
             </li>
         </ul>
         <ul class="catalog">
@@ -159,7 +159,7 @@
                   <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -171,7 +171,7 @@
                   <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-кофейное с кусочками шоколада</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-кофейное с кусочками шоколада</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -183,7 +183,7 @@
                   <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
@@ -195,7 +195,7 @@
                   <span class="catalog-item__weight">/кг</span>
                 </div>
               </div>
-              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное крем-брюле с карамельной подливкой</a></h3>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное крем-брюле с карамельной подливкой</a></h3>
               <button class="catalog-item__hover-button button">Быстрый просмотр</button>
             </li>
             </ul>
