Поправила блок со статьями и подписками

--- a/index.html
+++ b/index.html
@@ -242,16 +242,17 @@
             </a>
         </div>
       </div>
+      <div class="subscribes">
+        <p class="subscribes__text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
+        </p>
+        <form class="subscribes__form">
+          <label class="visually-hidden" for="subscribes-email">Введите электронную почту для подписки на рассылку</label>
+          <input type="email" placeholder="Электронная почта" name="subscribes-email" id="subscribes-email">
+          <button class="subscribes__button button">Отправить</button>
+        </form>
+      </div>
     </section>
-    <section class="subscribes">
-      <p class="subscribes__text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
-      </p>
-      <form class="subscribes__form">
-        <label class="visually-hidden" for="subscribes-email">Введите электронную почту для подписки на рассылку</label>
-        <input type="email" placeholder="Электронная почта" name="subscribes-email" id="subscribes-email">
-        <button class="subscribes__button button">Отправить</button>
-      </form>
-    </section>
+
     <section class="map">
       <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3AXWUbK2nw6gR2-xpv16dDyL_sRWGopB5q&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script>
       <div class="address">
